<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="app.android.tiki.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/fake_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#ffffff"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/fake_menu_title_1"
                    android:textAllCaps="false" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/fake_menu_title_2"
                    android:textAllCaps="false" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/fake_menu_title_3"
                    android:textAllCaps="false" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/fake_menu_title_4"
                    android:textAllCaps="false" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/fake_submenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#1717ba"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingStart="10dp"
                android:text="@string/fake_menu_title_4"
                android:textColor="#ffffff" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/fake_item_space">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00ffffff"
                            android:gravity="center"
                            android:text="@string/fake_submenu_title_1"
                            android:textAllCaps="false"
                            android:textColor="#ffffff" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/fake_item_space">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00ffffff"
                            android:gravity="center"
                            android:text="@string/fake_submenu_title_2"
                            android:textAllCaps="false"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/fake_item_space">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00ffffff"
                            android:gravity="center"
                            android:text="@string/fake_submenu_title_3"
                            android:textAllCaps="false"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/fake_item_space">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00ffffff"
                            android:gravity="center"
                            android:text="@string/fake_submenu_title_4"
                            android:textAllCaps="false"
                            android:textColor="#ffffff" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/fake_information_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#ffffff"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/fake_information_item_img"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/fake_information_item_img"
                android:layout_toLeftOf="@id/fake_information_narrow_left"
                android:layout_toRightOf="@id/fake_information_item_img"
                android:layout_toStartOf="@id/fake_information_narrow_left"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fake_information_title"
                    android:textColor="#000000" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fake_information_desc" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/fake_information_narrow_left"
                android:layout_width="32dp"
                android:layout_height="32dp"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@mipmap/ic_launcher" />

        </RelativeLayout>

        <include
            layout="@layout/layout_hotsearches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#ffffff" />

        <RelativeLayout
            android:id="@+id/fake_login_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#ffffff"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/retry"
                android:layout_toStartOf="@id/retry"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fake_login_title"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#5ed2fc"
                        android:text="@string/sign_up"
                        android:textColor="#ffffff" />

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:background="#ff0000"
                        android:text="@string/sign_in"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/retry"
                android:layout_width="64dp"
                android:layout_height="64dp"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@mipmap/ic_launcher" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fake_deal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fake_item_space"
            android:background="#e615cd"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingStart="10dp"
                android:text="@string/fake_deal_title"
                android:textColor="#ffffff" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_launcher" />
            </FrameLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>

